plugins {
    id 'com.android.application'
}

android {
    namespace "net.sourceforge.opencamera"
    compileSdk 35

    defaultConfig {
        applicationId "net.sourceforge.opencamera"
        minSdk 21
        targetSdk 35
        versionCode 93
        versionName "1.55"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            minifyEnabled false
        }
    }

    // ✅ Ensure Java 17 compatibility
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    // ✅ Lint configuration (modern style)
    lint {
        abortOnError false
        checkReleaseBuilds false
    }
}

dependencies {
    // Core AndroidX
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.exifinterface:exifinterface:1.4.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.material:material:1.9.0'

    // Kotlin compatibility
    implementation platform("org.jetbrains.kotlin:kotlin-bom:1.9.0")

    // Testing
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test:runner:1.7.0'
    androidTestImplementation 'androidx.test:rules:1.7.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
}
